--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <div class="contact_form col-6">
                 <h2>Contact Me</h2>
 
-                <form action="mailto:yesminf852@gmail.com" method="post" enctype="text/plain">
+                <form action="mailto:farjanaa.yyeasmin@gmail.com" method="post" enctype="text/plain">
                     <p><input type="text" placeholder="Enter Your Name" name="Name "></p>
                     <p><input type="email" placeholder="Enter Your Email Address" name="Email "></p>
                     <textarea name="message" id="" cols="30" rows="10" placeholder="Enter your message"></textarea>
@@ -325,8 +325,8 @@
                 <h2>More Ways to Contact</h2>
                 <div class="media_button">
                     <button class="btn" onclick="window.open('https://www.facebook.com/profile.php?id=100007295927032')" class="request-callback"><i class="fa fa-facebook-official" aria-hidden="true" style="color:blue"></i></button>
-                    <button class="btn" onclick="window.open('https://github.com/FarjanaA-YeasminN')" class="request-callback"><i class="fa fa-github" aria-hidden="true" style="color:black"></i></button>
-                    <button class="btn" onclick="window.open('')" class="request-callback"><i class="fa fa-linkedin" aria-hidden="true"  style="color:rgb(45, 70, 153)"></i></button>
+                    <button class="btn" onclick="window.open('https://github.com/FarjanaY')" class="request-callback"><i class="fa fa-github" aria-hidden="true" style="color:black"></i></button>
+                    <button class="btn" onclick="window.open('https://www.linkedin.com/in/farjana-yeasmin-15107923b/')" class="request-callback"><i class="fa fa-linkedin" aria-hidden="true"  style="color:rgb(45, 70, 153)"></i></button>
                
                 </div>
             </div>
